chore: Adciona e configura pagina quem sou

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+code {
+    color: #a57f5c !important;
+}
+
+.text-default {
+    font-size: 30px;
+}
