chore: Adciona e configura pagina O que faço

--- a/src/app/hobbies/hobbies.component.html
+++ b/src/app/hobbies/hobbies.component.html
@@ -1,1 +1,62 @@
-<p>hobbies works!</p>
+<div class="mt-2 py-20 pt-lg-32 bg-dark rounded-bottom-10 overflow-hidden position-relative z-1 min-default">
+    <br>
+
+    <div class="container mw-screen-xl">
+        <div class="row">
+            <div class="col-lg-9 col-md-12">
+                <h2 class="display-4 font-display text-white fw-bolder lh-tight mb-4">João Manuel Correia Cabanga</h2>
+                <p class="text-default text-lg text-white text-opacity-75">Idade: <code>29 anos</code></p>
+                <p class="text-default text-lg text-white text-opacity-75">Nacionalidade: <code>Angolana</code></p>
+                <p class="text-default text-lg text-white text-opacity-75">Nº Estudante:
+                    <code>2302584</code>
+                </p>
+                <p class="text-default text-lg text-white text-opacity-75">E-mail Estudante:
+                    <code>2302584@estudante.uab.pt</code>
+                </p>
+            </div>
+
+            <div class="col-lg-3 col-md-12">
+                <img src="/assets/profile_without.png" class="img-fluid" alt="...">
+            </div>
+        </div>
+
+        <br>
+
+        <div class="row g-6 g-lg-20 my-10">
+            <div class="col-md-6">
+                <div class="card shadow-none border-0">
+                    <div class="card-body p-7">
+                        <div class="mt-4 mb-7">
+                            <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
+                                    class="bi bi-regex"></i></div>
+                        </div>
+                        <div class="pt-2 pb-3">
+                            <h5 class="h3 font-display fw-bold mb-3">Contacto</h5>
+                            <p class="text-muted"><strong>E-mail: </strong>2302584@estudante.uab.pt</p>
+                            <p class="text-muted"><strong>E-mail: </strong>manucabanga@gmail.com</p>
+                            <p class="text-muted"><strong>WhatsApp: </strong>+244 913747220</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card shadow-none border-0">
+                    <div class="card-body p-7">
+                        <div class="mt-4 mb-7">
+                            <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
+                                    class="bi bi-person-workspace"></i></div>
+                        </div>
+                        <div class="pt-2 pb-3">
+                            <h5 class="h3 font-display fw-bold mb-3">Endereço</h5>
+                            <p class="text-muted">Pedro de Castro Vandune-Loy,</p>
+                            <p class="text-muted">Luanda,</p>
+                            <p class="text-muted">Angola</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+</div>
