--- a/src/app/que-faco/que-faco.component.html
+++ b/src/app/que-faco/que-faco.component.html
@@ -1,1 +1,29 @@
-<p>que-faco works!</p>
+<div class="mt-2 py-20 pt-lg-32 bg-dark rounded-bottom-10 overflow-hidden position-relative z-1 min-default">
+    <br>
+
+    <div class="container mw-screen-xl">
+        <div class="row">
+            <div class="col-lg-5 col-md-12">
+                <img src="/assets/look.png" class="img-fluid" alt="...">
+            </div>
+
+            <div class="col-lg-7 col-md-12">
+                <div class="container">
+                    <h2 class="display-4 font-display text-white fw-bolder lh-tight mb-4">Product Owner na ITGest</h2>
+                    <p class="text-default text-lg text-white text-opacity-75">Trabalho como Programador Full Stack há
+                        mais de 5 anos com desenvolvimento de software.</p>
+                    <p class="text-default text-lg text-white text-opacity-75">A minha principal Stack é Ruby/JS, mas
+                        tenho experiencia com diversas tecnologias e ferramentas incluindo Python NodeJS, RubyOnRails,
+                        MySQL, PostgreSQL, Redis, CI/CD</p>
+                    <p class="text-default text-lg text-white text-opacity-75">Atualmente sou Responsável de
+                        desenvolvimento de
+                        Produto de um produto interno, na área de venda e gestão de água. Uma solução com destaque
+                        internacional</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <br>
+</div>
