--- a/src/app/quem-sou/quem-sou.component.html
+++ b/src/app/quem-sou/quem-sou.component.html
@@ -1,4 +1,4 @@
-<div class="mt-2 py-20 pt-lg-32 bg-dark rounded-bottom-10 overflow-hidden position-relative z-1">
+<div class="mt-2 py-20 pt-lg-32 bg-dark rounded-bottom-10 overflow-hidden position-relative z-1 min-default">
     <br>
 
     <div class="container mw-screen-xl">
