chore: Adciona e configura pagina Hobbies

--- a/src/app/hobbies/hobbies.component.html
+++ b/src/app/hobbies/hobbies.component.html
@@ -2,59 +2,45 @@
     <br>
 
     <div class="container mw-screen-xl">
-        <div class="row">
-            <div class="col-lg-9 col-md-12">
-                <h2 class="display-4 font-display text-white fw-bolder lh-tight mb-4">João Manuel Correia Cabanga</h2>
-                <p class="text-default text-lg text-white text-opacity-75">Idade: <code>29 anos</code></p>
-                <p class="text-default text-lg text-white text-opacity-75">Nacionalidade: <code>Angolana</code></p>
-                <p class="text-default text-lg text-white text-opacity-75">Nº Estudante:
-                    <code>2302584</code>
-                </p>
-                <p class="text-default text-lg text-white text-opacity-75">E-mail Estudante:
-                    <code>2302584@estudante.uab.pt</code>
-                </p>
-            </div>
-
-            <div class="col-lg-3 col-md-12">
-                <img src="/assets/profile_without.png" class="img-fluid" alt="...">
-            </div>
-        </div>
-
-        <br>
 
         <div class="row g-6 g-lg-20 my-10">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card shadow-none border-0">
+                    <img src="/assets/natureza.png" class="card-img-top" alt="...">
                     <div class="card-body p-7">
-                        <div class="mt-4 mb-7">
-                            <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
-                                    class="bi bi-regex"></i></div>
-                        </div>
-                        <div class="pt-2 pb-3">
-                            <h5 class="h3 font-display fw-bold mb-3">Contacto</h5>
-                            <p class="text-muted"><strong>E-mail: </strong>2302584@estudante.uab.pt</p>
-                            <p class="text-muted"><strong>E-mail: </strong>manucabanga@gmail.com</p>
-                            <p class="text-muted"><strong>WhatsApp: </strong>+244 913747220</p>
-                        </div>
+                        <h5 class="card-title">Amante da natureza</h5>
+                        <p class="card-text">Amante da natureza e escuteiro a mais de 10 anos, sempre que há
+                            oportunidade vou em acampamento para o interior de Angola.
+                        </p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+
+            <div class="col-md-4">
                 <div class="card shadow-none border-0">
+                    <img src="/assets/por_sol.png" class="card-img-top" alt="...">
                     <div class="card-body p-7">
-                        <div class="mt-4 mb-7">
-                            <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
-                                    class="bi bi-person-workspace"></i></div>
-                        </div>
-                        <div class="pt-2 pb-3">
-                            <h5 class="h3 font-display fw-bold mb-3">Endereço</h5>
-                            <p class="text-muted">Pedro de Castro Vandune-Loy,</p>
-                            <p class="text-muted">Luanda,</p>
-                            <p class="text-muted">Angola</p>
-                        </div>
+                        <h5 class="card-title">Fotografias</h5>
+                        <p class="card-text">Por viver na capital e litoral, pelo menos uma vez na semana vou a ilha de
+                            Luanda contemplar o por do sol e fazer Fotografias.
+                        </p>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-4">
+                <div class="card shadow-none border-0">
+                    <img src="/assets/book.png" class="card-img-top" alt="...">
+                    <div class="card-body p-7">
+                        <h5 class="card-title">Leitura</h5>
+                        <p class="card-text">Vivendo e aprendendo a cada dia, navegando pelo mundo atravez da leitura de
+                            livros
+                            de diversos contextos e temas
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
