chore: Adciona Readme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,7 @@
         </header>
     </div>
 
+    <!-- Carregamento de todos os componentes -->
     <router-outlet></router-outlet>
 
 
@@ -73,5 +74,4 @@
             </div>
         </footer>
     </div>
-
 </div>
